# abel-causal-benchmark

./: .gitignore  API_FEEDBACK.md  API_PARAMETERS.md  BENCHMARK_CASES_INDIVIDUAL.md  BENCHMARK_TEST_RESULTS.md  CAP_API_CLARIFICATION.md  CAP_API_USAGE.md  CAP_BENCHMARK_TEST_REPORT.md  CAP_IMPLEMENTATION_SUMMARY.md  CAP_LEARNING_SUMMARY.md  CAP_PROTOCOL_STANDARD.md  CAP_REFERENCE_LEARNING.md  CAP_SCHEMAS.md  CG_API_ENDPOINTS.md  CG_API_ISSUES.md  DEMO_GUIDE.md  ENDPOINT_TEST_STATUS.md  FUTUREX_COMPARISON.md  FUTUREX_DATASET_208.md  GROUND_TRUTH_REPORT.md  LICENSE  MORE_BENCHMARKS.md  README.md  RESPONSIBILITIES.md  SKILL.md  SUPPORTED_VERBS.md  VERBS_TEST_RESULTS.md  VERB_ENDPOINT_MAPPING.md  abel.code-workspace  download_benchmarks.py  pyproject.toml  run_benchmark_test.py  test_cap_api.py  test_cap_compatibility.py  test_cap_direct.py  test_cap_v2_compatibility.py  test_cap_with_benchmark.py  test_final_benchmark.py  test_llm_cap_hybrid.py
abel_causal_benchmark/: _index.json
benchmarks_downloaded/: README.md
cap_api_test/: cap_api_report.md
cap_benchmark_test/: cap_api_report.md  cap_test_report.md
cap_compat_test/: cap_compatibility_report.md
cap_direct_test/: cap_direct_report.md
cap_test_all_53/: cap_compatibility_report.md
cap_test_attest/: cap_compatibility_report.md
cap_test_attest2/: cap_compatibility_report.md
cap_test_final/: cap_compatibility_report.md
cap_test_full/: cap_compatibility_report.md
cap_test_intervention/: cap_test_report.md
cap_test_path/: cap_compatibility_report.md
causal_reasoning_cases_173/: CR_001.json  CR_002.json  CR_003.json  CR_004.json  CR_005.json  CR_006.json  CR_007.json  CR_008.json  CR_009.json  CR_010.json  CR_011.json  CR_012.json  CR_013.json  CR_014.json  CR_015.json  CR_016.json  CR_017.json  CR_018.json  CR_019.json  CR_020.json  CR_021.json  CR_022.json  CR_023.json  CR_024.json  CR_025.json  CR_026.json  CR_027.json  CR_028.json  CR_029.json  CR_030.json  CR_031.json  CR_032.json  CR_033.json  CR_034.json  CR_035.json  CR_036.json  CR_037.json  CR_038.json  CR_039.json  CR_040.json  (+134 more)
(+2775 files in other folders)
